# ml-platform

./: .env.example  .gitignore  Dockerfile.serving  Dockerfile.training  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
infra/nginx/: nginx.conf
monitoring/grafana/dashboards/: ml_platform.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
scripts/: setup_server.sh
src/features/: engineering.py
src/ingestion/: fetch_rates.py
src/serving/: main.py  predictor.py
src/training/: dataset.py  model.py  train.py
tests/: test_features.py  test_ingestion.py  test_serving.py
